plugins {
    id 'org.springframework.boot' version '4.0.1'
    id 'io.spring.dependency-management' version '1.1.7'
    id "com.gorylenko.gradle-git-properties" version "2.3.2"
    id "checkstyle"
    id 'java'
    id 'jacoco'
    id "io.freefair.lombok" version "8.14.3"
    id "com.github.node-gradle.node" version "7.1.0"
    id 'org.jetbrains.kotlin.jvm'
}

group = "run.ikaros.server"

checkstyle {
    toolVersion = "9.3"
    showViolations = false
    ignoreFailures = false
    configFile = rootProject.file("config/checkstyle/checkstyle.xml")
}

repositories {
    mavenCentral()

    maven { url 'https://repo.spring.io/milestone' }
    mavenLocal()
}


configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

springBoot {
    buildInfo()
}

bootJar {
    manifest {
        attributes "Implementation-Title": "Ikaros Application",
                "Implementation-Version": archiveVersion
    }
    archiveFileName = "ikaros-server.jar"
}

tasks.named('jar') {
    enabled = false
}

ext {
    commonsLang3 = "3.12.0"
    pf4j = '3.9.0'
    jsoup = '1.15.3'
}

dependencies {
    implementation project(':api')

    annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
    annotationProcessor "org.springframework:spring-context-indexer"

    // 针对插件RestTemplate的支持
    implementation 'org.apache.httpcomponents.client5:httpclient5:5.2.1'
    implementation 'org.json:json:20230227'

    implementation "io.micrometer:micrometer-registry-prometheus"

    implementation "org.springframework.boot:spring-boot-starter-data-redis-reactive"

    implementation 'org.apache.commons:commons-csv:1.14.1'

    implementation 'name.nkonev.r2dbc-migrate:r2dbc-migrate-spring-boot-starter'

    implementation 'io.jsonwebtoken:jjwt-api:0.12.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.5'

    developmentOnly 'org.springframework.boot:spring-boot-devtools'

    testImplementation 'org.springframework.boot:spring-boot-starter-data-r2dbc-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-webflux-test'
    testImplementation 'org.springframework.boot:spring-boot-testcontainers'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testImplementation 'org.testcontainers:testcontainers-junit-jupiter'
    testImplementation 'org.testcontainers:testcontainers-postgresql'
    testImplementation 'org.testcontainers:testcontainers-r2dbc'
    testImplementation 'io.projectreactor:reactor-test'
}


node {
    nodeProjectDir = file("${rootProject.projectDir}/console")
}

task pnpmInstallPackageShared(type: NpxTask) {
    command = 'pnpm'
    args = ['--filter', './packages/shared', 'install']
}

task buildFrontendPackageShared(type: NpxTask) {
    command = 'pnpm'
    args = ['--filter', './packages/shared', 'build']
    dependsOn("pnpmInstallPackageShared")
}

task pnpmInstallPackageApiClient(type: NpxTask) {
    command = 'pnpm'
    args = ['--filter', './packages/api-client', 'install', '--ignore-scripts=true']
}

task buildFrontendPackageApiClient(type: NpxTask) {
    command = 'pnpm'
    args = ['--filter', './packages/api-client', 'build']
    dependsOn("pnpmInstallPackageApiClient")
}

task pnpmInstallFrontend(type: NpxTask) {
    command = "pnpm"
    args = ["install"]
    dependsOn("buildFrontendPackageShared", "buildFrontendPackageApiClient")
}

task buildFrontend(type: NpxTask) {
    command = 'pnpm'
    args = ['build']
    dependsOn("pnpmInstallFrontend")
}

task pnpmDev(type: NpxTask) {
    command = "pnpm"
    args = ["dev"]
    dependsOn("buildFrontend")
}

build {
    // build frontend before build
    // tasks.getByName('compileJava').dependsOn('buildFrontend')
}


tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

tasks.named('test') {
    useJUnitPlatform()
    finalizedBy jacocoTestReport
}

tasks.named('jacocoTestReport') {
    reports {
        xml.required = true
        html.required = true
    }
//    afterEvaluate {
//        classDirectories.setFrom(files(classDirectories.files.collect {
//            fileTree(dir: it, exclude: [
//                    "run/ikaros/core/IkarosApplication.class",
//                    "run/ikaros/core/infra/properties/*",
//                    "run/ikaros/core/store/entity/*",
//                    "run/ikaros/core/store/enums/*"
//            ])
//        }))
//    }
}
kotlin {
    jvmToolchain(21)
}

